# rust_Cryptography

Homework/Ex1/signed-dh/: Cargo.toml
Homework/Ex1/signed-dh/src/: main.rs
Homework/Ex1/signed-dh/src/crypto/: aead.rs  dhke.rs  hkdf.rs  mod.rs  mod.rs:Zone.Identifier  signdemo.rs  signed_dh.rs
Homework/Ex1/signed-dh/src/encode/: encode_b64.rs
Homework/Ex1/signed-dh/src/io/: readline.rs
Homework/Ex2/tls-handshake/: Cargo.toml
Homework/Ex2/tls-handshake/src/: main.rs
Homework/Ex3/: Cargo.toml
Homework/Ex3/src/: main.rs
Homework/second/ex1/: Cargo.toml
Homework/second/ex1/src/: client.rs  config.rs  crypto.rs  lib.rs  main.rs  protocol.rs  server.rs
Homework/second/ex2/: Cargo.toml
Homework/second/ex2/src/: lib.rs  main.rs
Homework/second/ex3/: ex3.txt
Homework/third/Offline Attack/: Cargo.toml  Dictionary.txt
Homework/third/Offline Attack/src/: main.rs
Homework/third/SCRAM/: Analye SCRAM.docx
Homework/third/opaque/: Cargo.toml
Homework/third/opaque/src/: main.rs
