[package]
name = "pq-tls"
version = "0.1.0"
edition = "2021"

[dependencies]
ml-kem = "0.2.1"
ml-dsa = { version = "0.0.4", features = ["rand_core"] }
signature = "2.2.0"
rand = "0.8"
sha3 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
anyhow = "1.0"
