[package]
name = "opaque"
version = "0.1.0"
edition = "2024"

[dependencies]
elliptic-curve = { version = "0.13", default-features = false, features = ["hash2curve"] }
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve"] }
p256 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve"] }
p384 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve"] }
p521 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve"] }
curve25519-dalek = { version = "4", features = ["rand_core"] }
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
